@@ -67,7 +67,7 @@ along with the Beast library library.  If not, see http://www.gnu.org/licenses.
       <exclude name="ant/*.jar" />
       <exclude name="junit/*.jar"/>
       <exclude name="easymock/*.jar"/>
-      <exclude name="emma/*.jar"/>
+      <exclude name="jacoco/*.jar"/>
       <exclude name="cglib/*.jar"/>
     </fileset>
     <fileset dir="${baltraddb.java.path}/">
@@ -93,12 +93,10 @@ along with the Beast library library.  If not, see http://www.gnu.org/licenses.
     </fileset>
   </path>
 
-  <path id="emma.classpath" >
-    <pathelement location="${lib.dir}/emma/emma.jar" />
-    <pathelement location="${lib.dir}/emma/emma_ant.jar" />
+  <path id="jacoco.classpath" >
+    <pathelement location="${lib.dir}/jacoco/jacocoant.jar" />
   </path>
-
-  <taskdef resource="emma_ant.properties" classpathref="emma.classpath" />
+  <taskdef uri="antlib:org.jacoco.ant" resource="org/jacoco/ant/antlib.xml" classpathref="jacoco.classpath"/>
 
   <!-- Generates the deliverables -->
   <target name="build" depends="clean,compile">
@@ -132,7 +130,7 @@ along with the Beast library library.  If not, see http://www.gnu.org/licenses.
         <exclude name="ant/*.jar" />
         <exclude name="junit/*.jar"/>
         <exclude name="easymock/*.jar"/>
-        <exclude name="emma/*.jar"/>
+        <exclude name="jacoco/*.jar"/>
       	<exclude name="poi/*.jar"/>
       	<exclude name="dbunit/*.jar"/>
       	<exclude name="spring/spring-test.jar"/>
@@ -393,46 +391,43 @@ along with the Beast library library.  If not, see http://www.gnu.org/licenses.
   <!-- CODE COVERAGE -->
   <target name="instrument.coverage">
     <delete dir="${build.instrument.dir}" />
-    <delete file="${build.coverage.dir}/coverage.ec" />
-    <delete file="${build.coverage.dir}/metadata.emma" />
+    <delete file="${build.coverage.dir}/jacoco.exec" />
     <mkdir dir="${build.instrument.dir}" />
     <mkdir dir="${build.coverage.dir}" />
-
-  	<emma enabled="true">
-      <instr instrpath="${build.classes.dir}/"
-             destdir="${build.instrument.dir}/"	
-             metadatafile="${build.coverage.dir}/metadata.emma"
-             merge="true"/>
-    </emma>
   </target>
   
   <target name="unittest.coverage" depends="instrument.coverage">
     <mkdir dir="${dist.dir}/coverage-reports" />
-    <junit dir="${build.test.dir}" showoutput="true" forkmode="perBatch" printsummary="no" >
-      <jvmarg line="-d64 -Djava.awt.headless=true -Xmx512m -XX:MaxPermSize=512m -noverify"/>
-      <sysproperty key="emma.coverage.out.file" file="${build.coverage.dir}/coverage.ec" /> <!-- So I know where ec file is placed -->
-      <formatter type="xml"/> 
-      <classpath location="${build.instrument.dir}" /> <!-- For instrumentation -->
-      <classpath refid="test.lib.path"/>
-      <classpath location="${build.classes.dir}"/>
-      <classpath refid="lib.path"/>
-      <classpath location="${build.test.dir}" />
-      <classpath refid="emma.classpath" />
-    	
-      <batchtest fork="yes" todir="${dist.dir}/junit-reports">
-        <fileset dir="${build.test.dir}" includes="**/*Test.class"/>
-      </batchtest>
-    </junit>
+    <jacoco:coverage destfile="${build.coverage.dir}/jacoco.exec" xmlns:jacoco="antlib:org.jacoco.ant">
+      <junit dir="${build.test.dir}" fork="true" forkmode="perBatch" showoutput="true" printsummary="no" >
+        <jvmarg line="-Djava.awt.headless=true -Xmx512m -XX:MaxMetaspaceSize=512m --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED"/>
+        <formatter type="xml"/> 
+        <classpath refid="test.lib.path"/>
+        <classpath location="${build.classes.dir}"/>
+        <classpath refid="lib.path"/>
+        <classpath location="${build.test.dir}" />
+      	
+        <batchtest todir="${dist.dir}/junit-reports">
+          <fileset dir="${build.test.dir}" includes="**/*Test.class"/>
+        </batchtest>
+      </junit>
+    </jacoco:coverage>
 
-  	<emma enabled="true">
-      <report sourcepath="${source.dir}" >
-        <fileset dir="${build.coverage.dir}" >
-          <include name="*.emma" />
-          <include name="*.ec" />
-        </fileset>
-      	<xml outfile="${dist.dir}/coverage-reports/coverage.xml" depth="method"/>
-      </report>
-    </emma>
+    <jacoco:report xmlns:jacoco="antlib:org.jacoco.ant">
+      <executiondata>
+        <file file="${build.coverage.dir}/jacoco.exec"/>
+      </executiondata>
+      <structure name="Beast Coverage Report">
+        <classfiles>
+          <fileset dir="${build.classes.dir}"/>
+        </classfiles>
+        <sourcefiles encoding="UTF-8">
+          <fileset dir="${source.dir}"/>
+        </sourcefiles>
+      </structure>
+      <html destdir="${dist.dir}/coverage-reports/html"/>
+      <xml destfile="${dist.dir}/coverage-reports/coverage.xml"/>
+    </jacoco:report>
   </target>
 
   <!-- performs coverage from running all tests (unit tests, integration tests-->
@@ -440,36 +435,41 @@ along with the Beast library library.  If not, see http://www.gnu.org/licenses.
     <mkdir dir="${dist.dir}/junit-reports" />
     <mkdir dir="${dist.dir}/coverage-reports" />
 
-	<junit dir="${build.test.dir}" showoutput="true" forkmode="perBatch" printsummary="no" >
-      <jvmarg line="-d64 -Djava.awt.headless=true -Xmx512m -XX:MaxPermSize=512m -noverify"/>
-      <sysproperty key="emma.coverage.out.file" file="${build.coverage.dir}/coverage.ec" /> <!-- So I know where ec file is placed -->
-      <formatter type="xml"/> 
-      <classpath location="${build.instrument.dir}" /> <!-- For instrumentation -->
-      <classpath refid="test.lib.path"/>
-      <classpath location="${build.classes.dir}"/>
-      <classpath refid="lib.path"/>
-      <classpath location="${build.test.dir}" />
-      <classpath location="${build.itest.dir}" />
-      <classpath refid="emma.classpath" />
+    <jacoco:coverage destfile="${build.coverage.dir}/jacoco.exec" xmlns:jacoco="antlib:org.jacoco.ant">
+      <junit dir="${build.test.dir}" fork="true" forkmode="perBatch" showoutput="true" printsummary="no" >
+        <jvmarg line="-Djava.awt.headless=true -Xmx512m -XX:MaxMetaspaceSize=512m --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED"/>
+        <formatter type="xml"/> 
+        <classpath refid="test.lib.path"/>
+        <classpath location="${build.classes.dir}"/>
+        <classpath refid="lib.path"/>
+        <classpath location="${build.test.dir}" />
+        <classpath location="${build.itest.dir}" />
     	
-      <batchtest fork="true" todir="${dist.dir}/junit-reports">
-        <fileset dir="${build.test.dir}" includes="**/*Test.class"/>
-        <fileset dir="${build.itest.dir}" includes="**/*Test.class"
-                 excludes="eu/baltrad/beast/net/FileDistributionITest.class"/>
-      </batchtest>
-    </junit>
+        <batchtest todir="${dist.dir}/junit-reports">
+          <fileset dir="${build.test.dir}" includes="**/*Test.class"/>
+          <fileset dir="${build.itest.dir}" includes="**/*Test.class"
+                   excludes="eu/baltrad/beast/net/FileDistributionITest.class"/>
+        </batchtest>
+      </junit>
+    </jacoco:coverage>
 
     <antcall target="stop-baltrad-bdb-server" />
 
-  	<emma enabled="true">
-      <report sourcepath="${source.dir}" >
-        <fileset dir="${build.coverage.dir}" >
-          <include name="*.emma" />
-          <include name="*.ec" />
-        </fileset>
-      	<xml outfile="${dist.dir}/coverage-reports/coverage.xml" depth="method"/>
-      </report>
-    </emma>
+    <jacoco:report xmlns:jacoco="antlib:org.jacoco.ant">
+      <executiondata>
+        <file file="${build.coverage.dir}/jacoco.exec"/>
+      </executiondata>
+      <structure name="Beast Coverage Report">
+        <classfiles>
+          <fileset dir="${build.classes.dir}"/>
+        </classfiles>
+        <sourcefiles encoding="UTF-8">
+          <fileset dir="${source.dir}"/>
+        </sourcefiles>
+      </structure>
+      <html destdir="${dist.dir}/coverage-reports/html"/>
+      <xml destfile="${dist.dir}/coverage-reports/coverage.xml"/>
+    </jacoco:report>
   </target>
 	
   <!-- clean directories for building -->
